src/User/StatisticsYear/styles.scss
#user-statistics-details {
  .year-selector {
    display: flex;
    flex: 1;
    flex-direction: row-reverse;
    padding: 0 8px;
    width: 100%;
    overflow: scroll;
    white-space: nowrap;

    ion-badge {
      margin: 20px 5px;
      background: white;
      padding: 10px;
      min-width: fit-content;
      color: black;
      font-weight: 500;

      font-size: 1.1em;
      font-family: 'Museo';

      &.selected {
        background: var(--ion-color-primary);
        color: var(--ion-color-primary-contrast);
      }
    }
  }

  table {
    margin: 0 auto;
    margin-top: 20px;
    margin-bottom: 30px;
    width: 100%;
    max-width: 95%;
    font-weight: 300;
    font-family: 'Museo';

    thead {
      background-color: var(--ion-color-step-100, #e6e6e6) !important;
      font-weight: normal;

      th {
        padding: 10px;
        font-weight: normal;
        white-space: nowrap;

        ion-icon {
          margin: -3px 5px;
        }
      }
    }

    tbody {
      background-color: white;
    }

    tr:nth-child(even) {
      background-color: #f9f9f9;
    }

    td {
      padding: 15px;
    }

    td:not(:first-of-type) {
      text-align: center;
    }

    th:last-of-type {
      border-radius: 0 10px 0 0;
    }
    th:first-of-type {
      border-radius: 10px 0 0 0;
      text-align: left;
    }
    tr > td:first-of-type {
      padding: 0 0 0 4px;
    }
    tr > td:nth-of-type(2) {
      font-weight: 500;
      font-family: 'Museo';
    }

    ion-avatar {
      margin: 4px 0px 4px 2px;
      background: var(--avatar-background);
      padding: 2px;
      width: 50px;
      height: 50px;

      ion-icon.default-thumbnail {
        padding: 15%;
        width: 70%;
        height: 70%;
        --ionicon-stroke-width: 19px;
      }

      ion-icon {
        padding: 10px;
        width: calc(100% - 20px);
        height: calc(100% - 20px);

        --ionicon-stroke-width: 20px;

        color: #003b18 !important;
      }
    }
  }

  .source {
    margin: 15px auto;
    width: 100%;
    max-width: 90%;
    span {
      text-align: left;
    }
  }
}

